--- a/FinalPortfolio/portfolio.css
+++ b/FinalPortfolio/portfolio.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #999999;
+  background-color: #dfa8a8;
 }
 
 #wrapper {
@@ -7,7 +7,7 @@ body {
   width: 1200px;
   border-radius: 0.5%;
   padding: 24px;
-  background-color: #999999;
+  background-color: #f1cbcb;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 24px;
@@ -36,14 +36,16 @@ nav li a{
 }
 nav li a{
   border-radius: 2%;
-  background-color:#505050
+  background-color:rgb(221, 78, 78)
   
   
 }
 nav li a:hover{
-  width: 184px;
-  padding: 15px;
-  background-color:#2b2b2b
+  width: 185px;
+  padding: 18px;
+  color: #a09e9e;
+  background-color:#8f2d2d
+  
   
   
   
@@ -61,7 +63,7 @@ nav ul{
  
 }
 nav{
-  background-color: #505050;
+  background-color: rgb(221, 78, 78);
   border: 1px solid #000000;
   clear: both;
   grid-column: span 12
@@ -161,6 +163,19 @@ img:hover {
   resize: vertical 
 }
 
+input[type=email], select, textarea {
+  font-family: "panel-sans", serif, Geneva, Tahoma, sans-serif;
+  width: 100%; 
+  padding: 12px; 
+  border: 1px solid #ccc; 
+  background-color: #dfdfdf;
+  border-radius: 4px; 
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+  resize: vertical 
+}
+
 input[type=submit] {
   font-family: "panel-sans", serif, Geneva, Tahoma, sans-serif;
   background-color: #2c2c2c;
@@ -176,46 +191,26 @@ input[type=submit]:hover {
   background-color: #3a3a3a;
 }
 
-.container {
-  font-family: "panel-sans", serif, Geneva, Tahoma, sans-serif;
-  border-radius: 5px;
-  background-color: #c0c0c0;
-  padding: 20px;
+
+
+
+
+
+footer{
   clear: both;
   grid-column: span 12;
-} 
-
-#fname2{
-  font-weight: bold;
+  font-family: "panel-sans", serif, Geneva, Tahoma, sans-serif;
+  border-radius: 0.5%;
+  padding: 24px;
 }
 
-#lname2{
-  font-weight: bold;
-}
-#email2{
-  font-weight: bold;
+#fs-frm{
+  clear: both;
+  grid-column: span 12;
 }
 
-#country2{
-  font-weight: bold;
-}
-#subject2{
-  font-weight: bold;
-}
-#fname{
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-#lname{
-  font-family: Arial, Helvetica, sans-serif;
-}
-#email{
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-#country{
-  font-family: Arial, Helvetica, sans-serif;
-}
-#subject{
-  font-family: Arial, Helvetica, sans-serif;
+#dungeongame{
+  clear: both;
+  grid-column: span 12;
+  text-align: center;
 }
